move sdkmod to include older

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 
 [env:nrf52_dk]
 platform = nordicnrf52
-framework = arduino ; change this  to bare metal?
+; framework = arduino ; change this  to bare metal?
 board = nrf52_dk
 
 
